--- a/client/src/style/Project/project.scss
+++ b/client/src/style/Project/project.scss
@@ -7,12 +7,16 @@
         @include index.page-display;
         display: flex;
         background-image: url("../../assets/media/1.jpg");
+        background-attachment: fixed;
         background-size: contain;
+        min-width: 100vw;
+        width: fit-content;
 
         .project-board {
             position: relative;
-            flex: 1;
             z-index: 0;
+            min-height: 100%;
+            min-width: 100%;
 
             h2 {
                 padding-left: 1rem;
